2000-11-02  Akim Demaille  <akim@epita.fr>

	* autoupdate.sh (m4.txt): Use `dumpdef' and m4 to build it.

2000-11-02  Akim Demaille  <akim@epita.fr>

	* m4sugar.m4 (popdef, pushdef): Rename as...
	(m4_popdef, m4_pushdef): these.
	Adjust dependencies.
	* acgeneral.m4: Adjust.
	* aclang.m4: Likewise.
	* autoconf.m4 (popdef, pushdef): Reactivate them.

2000-11-02  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4 (AT_CHECK, AT_CLEANUP): Be more verbose when
	`-v' is passed.

2000-11-01  Pavel Roskin  <proski@gnu.org>

	* autoconf.sh: Using trap-safe "exit".
	* autoreconf.sh: Likewise.
	* autoupdate.sh: Likewise.
	* tests/base.at: Use AS_EXIT instead of exit in configure.in.
	* tests/m4sh.at: Likewise.
	* tests/semantics.at: Likewise.

2000-11-01  Akim Demaille  <akim@epita.fr>

	In M4sugar, move `define', `undefine', and `defn' into the `m4_'
	name space.

	* m4sugar.m4 (m4_define, m4_defn, m4_undefine): New macros.
	(define, defn, undefine): Undefine.
	Adjust all uses.
	* m4sh.m4: Adjust.
	* autoconf.m4: Reenable these builtins.
	* m4sugar.m4 (m4_expansion_stack_dump): Use m4_copy.

2000-11-01  Akim Demaille  <akim@epita.fr>

	GNU M4 1.4 improperly handle the traces of copies of builtins.

	* autoconf.sh (task trace): When tracing `BUILTIN' also trace
	`m4_BUILTIN'.

2000-11-01  Akim Demaille  <akim@epita.fr>

	Autoupdate should not depend upon foreign macros.

	* autoupdate.sh (ac.m4): Use `_au_define', not `define'.
	(input.m4): Use `_au_BUILTIN' not `BUILTIN'.

2000-11-01  Akim Demaille  <akim@epita.fr>

	* m4sugar.m4 (m4_fatal): Dump the expansion stack.
	* acgeneral.m4 (AC_FATAL): Use m4_fatal.

2000-11-01  Akim Demaille  <akim@epita.fr>

	Move the `defun' handling into M4sugar.

	* m4sugar.m4 (_m4_divert(GROW), _m4_expansion_stack_dump)
	_m4_defun_pro, _m4_defun_epi, m4_defun, $1, m4_defun_once)
	m4_before, _m4_require, m4_require, m4_expand_once, m4_provide)
	m4_provide_ifelse): New macros.
	* acgeneral.m4 (_AC_EXPANSION_STACK_DUMP, _AC_DEFUN_PRO)